# Casper-Velocity

./: .env.example  .env.local  .env.vercel  .gitignore  .vercelignore  CRITICAL_FIXES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_MOCK_BUIDL.md  DEPLOY_VERCEL.md  ENV_FILES_UPDATED.md  FINAL_FIX_COMPLETE.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  GET_ALCHEMY_KEY.md  METAMASK_SIMULATION_WARNING.md  QUICK_START.md  README.md  REAL_VERIFICATION_COMPLETE.md  RPC_ENDPOINT_FIXED.md  STATUS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VERCEL_ENV_SETUP.md  VERCEL_QUICKSTART.md  VERCEL_SETUP_COMPLETE.md  VIDEO_SCRIPT.md  deploy-mock-buidl.sh  deploy.sh  env.ts  next.config.ts  package-lock.json  package.json  setup-vercel.ps1  setup-vercel.sh  tailwind.config.ts  test-contract-call.js  test-real-verification.js  tsconfig.tsbuildinfo  (+1 more)
contracts/: Cargo.toml  DEPLOY_SOLIDITY.md  StylusWrapper.sol  deploy.js  deploy_log.txt  deployed-addresses.json  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/lib/verifier/: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_INFO.md  DEPLOYMENT_READY.md  FUNCTIONALITY_ANALYSIS.md  IZKVerifier.sol  SIMPLIFIED_VS_PRODUCTION.md  STYLUS_QUICKSTART.md  UPDATES_SUMMARY.md  check-deployment.js  (+5 more)
contracts/script/: DeployCorrections.s.sol  DeployWrapper.s.sol  RedeployMockBUIDL.s.sol
contracts/src/: CreditScoreVerifier.sol  IGroth16Verifier.sol  MockBUIDL.sol  PasskeyRegistry.sol  StylusVerifierWrapper.sol  ZKVerifier.sol  lib.rs  liquid_staking.rs  types.rs  yield_aggregator.rs
(+90 files in other folders)
